deployments/grafana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: grafana
